syntax = "proto3";

option csharp_namespace = "MarketData.Grpc";

// Service for managing instrument model configurations
service ModelConfigurationService {
    // Get all configurations for an instrument
    rpc GetConfigurations(GetConfigurationsRequest) returns (ConfigurationsResponse);

    // Switch the active model for an instrument
    rpc SwitchModel(SwitchModelRequest) returns (SwitchModelResponse);

    // Update RandomMultiplicative configuration
    rpc UpdateRandomMultiplicativeConfig(UpdateRandomMultiplicativeRequest) returns (UpdateConfigResponse);

    // Update MeanReverting configuration
    rpc UpdateMeanRevertingConfig(UpdateMeanRevertingRequest) returns (UpdateConfigResponse);

    // Update RandomAdditiveWalk configuration
    rpc UpdateRandomAdditiveWalkConfig(UpdateRandomAdditiveWalkRequest) returns (UpdateConfigResponse);
}

// Request messages
message GetConfigurationsRequest {
    string instrument_name = 1;
}

message SwitchModelRequest {
    string instrument_name = 1;
    string model_type = 2;
}

message UpdateRandomMultiplicativeRequest {
    string instrument_name = 1;
    double standard_deviation = 2;
    double mean = 3;
}

message UpdateMeanRevertingRequest {
    string instrument_name = 1;
    double mean = 2;
    double kappa = 3;
    double sigma = 4;
    double dt = 5;
}

message UpdateRandomAdditiveWalkRequest {
    string instrument_name = 1;
    repeated WalkStep walk_steps = 2;
}

// Response messages
message ConfigurationsResponse {
    string instrument_name = 1;
    string active_model = 2;
    RandomMultiplicativeConfigData random_multiplicative = 3;
    MeanRevertingConfigData mean_reverting = 4;
    bool flat_configured = 5;
    RandomAdditiveWalkConfigData random_additive_walk = 6;
}

message RandomMultiplicativeConfigData {
    double standard_deviation = 1;
    double mean = 2;
}

message MeanRevertingConfigData {
    double mean = 1;
    double kappa = 2;
    double sigma = 3;
    double dt = 4;
}

message RandomAdditiveWalkConfigData {
    repeated WalkStep walk_steps = 1;
}

message WalkStep {
    double probability = 1;
    double step_value = 2;
}

message SwitchModelResponse {
    string message = 1;
    string previous_model = 2;
    string new_model = 3;
}

message UpdateConfigResponse {
    string message = 1;
    bool success = 2;
}
